# cpp-test

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  Config.mk  Dockerfile  LICENSE  README.md  TODO  benchmark.sh  build.sh  coverage.sh  dist.sh  docker.sh  include-what-you-use.sh  profile.sh  security.sh  symbolic.sh  test-integration.sh  test-unit.sh
cfg/: database.ini  script.txt
cmake/: benchmark.cmake  boost.cmake  fmt.cmake  gtest.cmake  qt5.cmake  qt6.cmake  sqlite3.cmake  thread.cmake
install/: install_afl.sh  install_boost.sh  install_cppcheck.sh  install_crow.sh  install_docker.sh  install_gbench.sh  install_gtest.sh  install_include-what-you-use.sh  install_qt.sh  install_sqlite.sh
src/: CMakeLists.txt  Core.cpp  Core.hpp  main.cpp  strings.hpp
src/interface/: CMakeLists.txt  Interface.cpp  Interface.hpp  InterfaceFactory.cpp  InterfaceFactory.hpp  QtWindow.cpp  QtWindow.hpp  QtWindow.ui  ScriptInterface.cpp  ScriptInterface.hpp  TerminalInterface.cpp  TerminalInterface.hpp  WebInterface.cpp  WebInterface.hpp  Window.hpp  WindowInterface.cpp  WindowInterface.hpp
src/interface/WebInterface/: exit.html  form.html  get.html  index.html  store.html
src/interface/WebInterface/styles/: style.css
src/persistence/: CMakeLists.txt  DBStorage.cpp  DBStorage.hpp  FileStorage.cpp  FileStorage.hpp  Format.cpp  Format.hpp  IniFormat.cpp  IniFormat.hpp  Storage.cpp  Storage.hpp  StorageFactory.cpp  StorageFactory.hpp
test/: CMakeLists.txt
test/benchmark/: CMakeLists.txt  DBStorageBenchmark.cpp  FileStorageBenchmark.cpp  IniFormatBenchmark.cpp  InterfaceBenchmark.cpp  benchmark.cpp
test/benchmark/input/database/: database.db  database.ini
test/hardware/: README.md  qdevice.py  spi.py  test.py
test/integration/: CMakeLists.txt  config_file_test.tcl  db_delete_test.tcl  db_get_test.tcl  db_set_test.tcl  fail_test.tcl  ini_delete_test.tcl  ini_get_test.tcl  ini_set_test.tcl  ini_special_chars_test.tcl  ini_whitespace_test.tcl  invalid_commands_test.tcl  persistence_test.tcl  test.sh  test.tcl  truncated_test.tcl
test/security/: CMakeLists.txt  test.sh
test/security/input/database/: database.ini
test/security/input/script/: get.txt  set_get.txt
test/symbolic/: CMakeLists.txt  IniFormatSymbolic.cpp  test.sh
test/system/: Host.robot  Test.robot
test/system/lib/: Host.py
test/unit/: CMakeLists.txt  CoreTest.cpp  CoreTest.hpp  DBStorageTest.cpp  DBStorageTest.hpp  FileStorageTest.cpp  FileStorageTest.hpp  IniFormatTest.cpp  IniFormatTest.hpp  InterfaceFactoryTest.cpp  InterfaceFactoryTest.hpp  InterfaceTest.cpp  InterfaceTest.hpp  ScriptInterfaceTest.cpp  ScriptInterfaceTest.hpp  StorageFactoryTest.cpp  StorageFactoryTest.hpp  TerminalInterfaceTest.cpp  TerminalInterfaceTest.hpp  test.cpp  test.sh
